beautiful chat page and work

--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,9 @@
   /* font-family: 'Challans', sans-serif; */
   /* font-family: 'Grytha Angel', sans-serif; */
   font-family: 'PT Mono', sans-serif;
-                                                
-  
-                                                
+}
+.mono{
+  font-family: 'PT Mono', sans-serif;
 }
 
 .alien{
